# DISCOREP

./: .gitignore  README.md  gen_query.py  preprocess.py  pyproject.toml  requirements.txt  test.py  train.py  validate_custom.py
examples/: PSM_Schema.py
examples/data/: PSM_01.csv  PSM_02_10000.csv  PSM_03.csv  PSM_03_distinct.csv  PSM_03_multi_attr.csv  PSM_03_multi_attr_single_attr.csv  PSM_04_multi_attr.csv  PSM_05.csv  PSM_05_substream.csv  PSM_06.csv  PSM_06_substream.csv  PSM_07.csv  PSM_08.csv  PSM_09.csv  PSM_10.csv
examples/schemas/: PSM_01.json  PSM_02.json  PSM_03.json  PSM_03_distinct.json  PSM_03_multi_attr.json  PSM_03_multi_attr_single_attr.json  PSM_04_multi_attr.json  PSM_05.json  PSM_06.json  PSM_07.json  PSM_08.json  PSM_09.json  PSM_10.json
immmo/: KnowledgeGraph.py  utils.py
immmo/constants/: GraphTypes.py  SampleTypes.py
immmo/extend/: igraph_extend.py
immmo/helpers/: embedding.py  metric.py  predicate.py  query.py  test.py  timing.py
immmo/model/: PSM.py  RepresentationLearning.py
immmo/test/: EdgeSeqMap_test.py
immmo/test/helpers/: graphTest.py
