[tool.poetry]
name = "immmo"
version = "0.1.0"
description = ""
authors = ["Kay Makowsky <kay.makowsky@hu-berlin.de>"]

[tool.poetry.dependencies]
python = "3.8.0"
ipykernel = "6.15.1"
ipython = "8.4.0"
matplotlib = "3.5.3"
natsort = "8.1.0"
numpy = "1.23.1"
pandas = "1.4.3"
scikit-learn = "1.1.1"
scipy = "1.8.1"
igraph = "0.9.11"
cairocffi = "1.3.0"
pytest = "7.1.2"
torch = "1.12.1"
ordered-set = "4.1.0"
tqdm = "4.64.0"
ipywidgets = "7.7.1"
kmeans-pytorch = "^0.3"
ray = {extras = ["tune"], version = "^2.0.1"}
GitPython = "^3.1.29"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"